[gd_scene load_steps=5 format=3 uid="uid://c2leamfk2tb21"]

[ext_resource type="Script" path="res://scenes/vm_info/VBoxContainer2.gd" id="1_mbttn"]
[ext_resource type="LabelSettings" uid="uid://7gb05otus5vx" path="res://label_settings/new_label_settings.tres" id="2_1ib6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wg8p"]
bg_color = Color(0.647059, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jrfsy"]
bg_color = Color(0.00784314, 0.243137, 0.541176, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VmInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.74902, 0.858824, 0.996078, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
script = ExtResource("1_mbttn")

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Add a resource to the following scenario:"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 5

[node name="Wrapper_ID" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerVMID" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_ID"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_ID/HContainerVMID"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "vmid"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_ID/HContainerVMID"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_ID"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The unique ID of the virtual machine"
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_Name" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerName" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Name"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Name/HContainerName"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "name
"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Name/HContainerName"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 10
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Name"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The name assigned to the virtual machine."
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_status" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerStatus" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_status"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_status/HContainerStatus"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 2
text = "status"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_status/HContainerStatus"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_status"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The current state of the VM (e.g., running, stopped)."
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_Cpus" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerCpus" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Cpus"]
layout_mode = 2

[node name="Label4" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Cpus/HContainerCpus"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
text = "cpus
"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Cpus/HContainerCpus"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_Cpus"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The number of CPU cores assigned to the virtual machine."
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_maxdisk" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainermaxdisk" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxdisk"]
layout_mode = 2

[node name="Label4" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxdisk/HContainermaxdisk"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
text = "maxdisk
"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxdisk/HContainermaxdisk"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxdisk"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The maximum disk space allocated to the virtual machine, in bytes."
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_maxmem" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerMaxmem" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxmem"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxmem/HContainerMaxmem"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "maxmem"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxmem/HContainerMaxmem"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 10
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_maxmem"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The maximum amount of memory (RAM) allocated to the virtual machine, in bytes."
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_uptime" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerUptime" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_uptime"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_uptime/HContainerUptime"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "uptime
"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_uptime/HContainerUptime"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 10
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_uptime"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The time (in seconds) the virtual machine has been running (if it's running)."
label_settings = ExtResource("2_1ib6q")

[node name="Wrapper_disk" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HContainerDisk" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_disk"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_disk/HContainerDisk"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "disk
"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_disk/HContainerDisk"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 10
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer/Wrapper_disk"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = " The amount of disk space currently used by the virtual machine, in bytes."
label_settings = ExtResource("2_1ib6q")

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 5

[node name="Wrapper_mem" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HContainerMem" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/Wrapper_mem"]
layout_mode = 2

[node name="Label4" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/Wrapper_mem/HContainerMem"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
text = "mem"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/Wrapper_mem/HContainerMem"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/Wrapper_mem"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The amount of memory currently in use by the virtual machine, in bytes."
label_settings = ExtResource("2_1ib6q")

[node name="WrapperNetin" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HContainerNetin" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetin"]
layout_mode = 2

[node name="Label4" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetin/HContainerNetin"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
text = "netin"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetin/HContainerNetin"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetin"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The amount of incoming network traffic (in bytes)."
label_settings = ExtResource("2_1ib6q")

[node name="WrapperNetout" type="VBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HContainerNetout" type="HBoxContainer" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetout/HContainerNetout"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 0
text = "netout"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetout/HContainerNetout"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 10
text = "Value"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/HBoxContainer/VBoxContainer2/WrapperNetout"]
modulate = Color(0.00784314, 0.243137, 0.541176, 1)
layout_mode = 2
text = "The amount of outgoing network traffic (in bytes)."
label_settings = ExtResource("2_1ib6q")

[node name="ButtonContainerVM" type="HBoxContainer" parent="ColorRect/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Delete_vm_Button" type="Button" parent="ColorRect/VBoxContainer2/ButtonContainerVM"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_1wg8p")
text = "Delete VM"

[node name="BackButton2" type="Button" parent="ColorRect/VBoxContainer2/ButtonContainerVM"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_jrfsy")
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="ColorRect/VBoxContainer2"]
